Optimize string concatenation in frequently-called methods
- Replace inefficient string += operations with StringBuilder
- Extract SQL building logic into separate methods for clarity
- Improve performance in configuration validation and audit queries

Co-authored-by: mmoayyed <1205228+mmoayyed@users.noreply.github.com>